@@ -321,6 +321,7 @@ void JParameterManager::PrintParameters(void)
 	no_warn.push_back("JANA:");
 	no_warn.push_back("EVENTS_TO_SKIP");
 	no_warn.push_back("EVENTS_TO_KEEP");
+	no_warn.push_back("EVENT_SOURCE_TYPE");
 	no_warn.push_back("MAX_EVENTS_IN_BUFFER");
 	no_warn.push_back("THREAD_TIMEOUT");
 	no_warn.push_back("THREAD_TIMEOUT_FIRST_EVENT");
